@@ -332,7 +332,15 @@
 
   h2
     background: url(../../images/category-bg.png) no-repeat
+    position: relative
     width: 655px
+
+    .counter
+      font-size: 0.8em
+      position: absolute
+      right: 10px
+      top: 8px
+      +text-shadow(#fff, 0, 0, 0)
 
   #twitter_create_list
     cursor: pointer
