@@ -814,45 +814,54 @@ body {
 /* line 333, ../../../app/stylesheets/application.sass */
 #category_show h2 {
   background: url(../../images/category-bg.png) no-repeat;
+  position: relative;
   width: 655px;
 }
-/* line 337, ../../../app/stylesheets/application.sass */
+/* line 338, ../../../app/stylesheets/application.sass */
+#category_show h2 .counter {
+  font-size: 0.8em;
+  position: absolute;
+  right: 10px;
+  top: 8px;
+  text-shadow: white 0 0 0;
+}
+/* line 345, ../../../app/stylesheets/application.sass */
 #category_show #twitter_create_list {
   cursor: pointer;
 }
-/* line 340, ../../../app/stylesheets/application.sass */
+/* line 348, ../../../app/stylesheets/application.sass */
 #category_show #twitter_create_list_form {
   display: none;
 }
-/* line 343, ../../../app/stylesheets/application.sass */
+/* line 351, ../../../app/stylesheets/application.sass */
 #category_show .category {
   margin-top: 5px;
   margin-right: 0;
   float: left;
 }
-/* line 348, ../../../app/stylesheets/application.sass */
+/* line 356, ../../../app/stylesheets/application.sass */
 #category_show .category h2 {
   width: 300px;
 }
-/* line 351, ../../../app/stylesheets/application.sass */
+/* line 359, ../../../app/stylesheets/application.sass */
 #category_show .category .tweets {
   display: block;
   margin-top: 5px;
 }
 
-/* line 356, ../../../app/stylesheets/application.sass */
+/* line 364, ../../../app/stylesheets/application.sass */
 #category_chooser {
   background: transparent;
   width: 665px;
 }
-/* line 360, ../../../app/stylesheets/application.sass */
+/* line 368, ../../../app/stylesheets/application.sass */
 #category_chooser h2 {
   background: url(../../images/category-bg.png) no-repeat;
   width: 655px;
   height: 40px;
   font-weight: bold;
 }
-/* line 366, ../../../app/stylesheets/application.sass */
+/* line 374, ../../../app/stylesheets/application.sass */
 #category_chooser #draggable, #category_chooser .action-area {
   background: #bfd9e6;
   font-size: 0.85em;
@@ -860,7 +869,7 @@ body {
   margin-top: 10px;
   padding: 15px;
 }
-/* line 373, ../../../app/stylesheets/application.sass */
+/* line 381, ../../../app/stylesheets/application.sass */
 #category_chooser #draggable span, #category_chooser #droppable span {
   background: #f7fcfe;
   color: #666666;
@@ -879,25 +888,25 @@ body {
   -o-box-shadow: #9dc2d5 0px 0px 10px;
   box-shadow: #9dc2d5 0px 0px 10px;
 }
-/* line 383, ../../../app/stylesheets/application.sass */
+/* line 391, ../../../app/stylesheets/application.sass */
 #category_chooser #draggable span.ui-state-disabled {
   color: #999999;
   background: #eeeeee;
 }
-/* line 387, ../../../app/stylesheets/application.sass */
+/* line 395, ../../../app/stylesheets/application.sass */
 #category_chooser #draggable {
   margin: 0;
 }
-/* line 390, ../../../app/stylesheets/application.sass */
+/* line 398, ../../../app/stylesheets/application.sass */
 #category_chooser .action-area {
   padding: 0;
 }
-/* line 393, ../../../app/stylesheets/application.sass */
+/* line 401, ../../../app/stylesheets/application.sass */
 #category_chooser .action-area #droppable {
   min-height: 30px;
   padding: 15px;
 }
-/* line 396, ../../../app/stylesheets/application.sass */
+/* line 404, ../../../app/stylesheets/application.sass */
 #category_chooser p {
   background: #373d44;
   color: white;
@@ -907,22 +916,22 @@ body {
   padding: 15px;
 }
 
-/* line 404, ../../../app/stylesheets/application.sass */
+/* line 412, ../../../app/stylesheets/application.sass */
 .box {
   width: 665px;
 }
-/* line 407, ../../../app/stylesheets/application.sass */
+/* line 415, ../../../app/stylesheets/application.sass */
 .box h2 {
   background: url(../../images/category-bg.png) no-repeat;
   width: 655px;
   height: 40px;
   font-weight: bold;
 }
-/* line 413, ../../../app/stylesheets/application.sass */
+/* line 421, ../../../app/stylesheets/application.sass */
 .box .content {
   padding: 10px;
 }
-/* line 416, ../../../app/stylesheets/application.sass */
+/* line 424, ../../../app/stylesheets/application.sass */
 .box .content .item {
   background: #f7fcfe;
   padding: 4px;
@@ -935,12 +944,12 @@ body {
   -khtml-border-radius: 3px;
   border-radius: 3px;
 }
-/* line 423, ../../../app/stylesheets/application.sass */
+/* line 431, ../../../app/stylesheets/application.sass */
 .box .content a.item {
   color: black;
   text-decoration: none;
 }
-/* line 427, ../../../app/stylesheets/application.sass */
+/* line 435, ../../../app/stylesheets/application.sass */
 .box .rounded_box {
   -moz-border-radius: 5px;
   -webkit-border-radius: 5px;
@@ -954,43 +963,43 @@ body {
   height: 25px;
   text-align: center;
 }
-/* line 435, ../../../app/stylesheets/application.sass */
+/* line 443, ../../../app/stylesheets/application.sass */
 .box .rounded_box a {
   font-size: 15px;
   color: #04abe2;
   text-decoration: none;
 }
 
-/* line 441, ../../../app/stylesheets/application.sass */
+/* line 449, ../../../app/stylesheets/application.sass */
 .users_list {
   width: 665px;
 }
-/* line 444, ../../../app/stylesheets/application.sass */
+/* line 452, ../../../app/stylesheets/application.sass */
 .users_list .users {
   display: block;
 }
-/* line 447, ../../../app/stylesheets/application.sass */
+/* line 455, ../../../app/stylesheets/application.sass */
 .users_list .users .tweet {
   width: 282px;
   float: left;
   margin-right: 10px;
   margin-left: 10px;
 }
-/* line 453, ../../../app/stylesheets/application.sass */
+/* line 461, ../../../app/stylesheets/application.sass */
 .users_list .users .tweet .body {
   min-height: 100px;
 }
-/* line 457, ../../../app/stylesheets/application.sass */
+/* line 465, ../../../app/stylesheets/application.sass */
 .users_list h2 {
   background: url(../../images/category-bg.png) no-repeat;
   width: 655px;
 }
 
-/* line 461, ../../../app/stylesheets/application.sass */
+/* line 469, ../../../app/stylesheets/application.sass */
 .categories_list {
   width: 665px;
 }
-/* line 465, ../../../app/stylesheets/application.sass */
+/* line 473, ../../../app/stylesheets/application.sass */
 .categories_list .categories .list {
   background: #f7fcfe;
   width: 292px;
@@ -998,36 +1007,36 @@ body {
   margin-right: 10px;
   min-height: 45px;
 }
-/* line 472, ../../../app/stylesheets/application.sass */
+/* line 480, ../../../app/stylesheets/application.sass */
 .categories_list .categories .list:hover {
   background: white;
 }
-/* line 475, ../../../app/stylesheets/application.sass */
+/* line 483, ../../../app/stylesheets/application.sass */
 .categories_list .categories .list .body {
   padding-left: 10px;
 }
-/* line 478, ../../../app/stylesheets/application.sass */
+/* line 486, ../../../app/stylesheets/application.sass */
 .categories_list .categories .list .body h3 {
   margin-bottom: 0;
 }
-/* line 481, ../../../app/stylesheets/application.sass */
+/* line 489, ../../../app/stylesheets/application.sass */
 .categories_list .categories .list .body .members {
   font-size: 1.2em;
   margin-left: 3px;
 }
-/* line 485, ../../../app/stylesheets/application.sass */
+/* line 493, ../../../app/stylesheets/application.sass */
 .categories_list h2 {
   background: url(../../images/category-bg.png) no-repeat;
   width: 655px;
 }
 
-/* line 489, ../../../app/stylesheets/application.sass */
+/* line 497, ../../../app/stylesheets/application.sass */
 .pagination {
   text-align: center;
   clear: both;
 }
 
-/* line 493, ../../../app/stylesheets/application.sass */
+/* line 501, ../../../app/stylesheets/application.sass */
 #create_list_from_category {
   background: #e1f3fd;
   margin: 10px;
@@ -1044,30 +1053,30 @@ body {
   margin-right: 10px;
   width: 272.174px;
 }
-/* line 500, ../../../app/stylesheets/application.sass */
+/* line 508, ../../../app/stylesheets/application.sass */
 #create_list_from_category p {
   margin: 10px;
   text-align: center;
 }
-/* line 504, ../../../app/stylesheets/application.sass */
+/* line 512, ../../../app/stylesheets/application.sass */
 #create_list_from_category label {
   margin-left: 5px;
   width: 70px;
   display: inline-block;
 }
-/* line 509, ../../../app/stylesheets/application.sass */
+/* line 517, ../../../app/stylesheets/application.sass */
 #create_list_from_category input {
   margin: 3px;
 }
-/* line 512, ../../../app/stylesheets/application.sass */
+/* line 520, ../../../app/stylesheets/application.sass */
 #create_list_from_category input[type=text] {
   width: 120px;
 }
-/* line 515, ../../../app/stylesheets/application.sass */
+/* line 523, ../../../app/stylesheets/application.sass */
 #create_list_from_category input[type=submit] {
   margin-left: 83px;
 }
-/* line 518, ../../../app/stylesheets/application.sass */
+/* line 526, ../../../app/stylesheets/application.sass */
 #create_list_from_category h2 {
   background: #0094da;
   color: white;
@@ -1081,7 +1090,7 @@ body {
   -khtml-border-radius: 12px;
   border-radius: 12px;
 }
-/* line 526, ../../../app/stylesheets/application.sass */
+/* line 534, ../../../app/stylesheets/application.sass */
 #create_list_from_category h2 a {
   color: white;
   font-weight: bold;
@@ -1092,12 +1101,12 @@ body {
   text-decoration: underline;
 }
 
-/* line 535, ../../../app/stylesheets/application.sass */
+/* line 543, ../../../app/stylesheets/application.sass */
 .modal {
   display: none;
 }
 
-/* line 538, ../../../app/stylesheets/application.sass */
+/* line 546, ../../../app/stylesheets/application.sass */
 .modal div.close {
   background-image: url(../../images/close.png);
   position: absolute;
@@ -1109,7 +1118,7 @@ body {
   z-index: 9999;
 }
 
-/* line 549, ../../../app/stylesheets/application.sass */
+/* line 557, ../../../app/stylesheets/application.sass */
 form .counter {
   position: absolute;
   left: 15px;
@@ -1118,25 +1127,25 @@ form .counter {
   font-weight: bold;
   color: #666666;
 }
-/* line 557, ../../../app/stylesheets/application.sass */
+/* line 565, ../../../app/stylesheets/application.sass */
 form textarea {
   resize: none;
 }
-/* line 560, ../../../app/stylesheets/application.sass */
+/* line 568, ../../../app/stylesheets/application.sass */
 form .warning {
   color: #660000;
 }
-/* line 562, ../../../app/stylesheets/application.sass */
+/* line 570, ../../../app/stylesheets/application.sass */
 form .exceeded {
   color: #ee0000;
 }
-/* line 565, ../../../app/stylesheets/application.sass */
+/* line 573, ../../../app/stylesheets/application.sass */
 form #tweet_submit {
   padding: 5px;
   float: right;
 }
 
-/* line 569, ../../../app/stylesheets/application.sass */
+/* line 577, ../../../app/stylesheets/application.sass */
 .clear {
   clear: both;
 }
